Applies the overflow to the correct element
This fixes the bug where the overflow was enlarging the app body rather than containing it within the appropriate section

--- a/src/app.module.css
+++ b/src/app.module.css
@@ -8,6 +8,7 @@
     color: var(--default-colour);
     display: grid;
     grid-template-columns: auto 1fr;
+    overflow: overlay;
 }
 
 @media (min-width: 800px) {
@@ -29,6 +30,7 @@
     user-select: none;
     display: grid;
     grid-template-rows: auto 1fr;
+    overflow: overlay;
 }
 
 .user-chat, .user-chat-highlighted {
@@ -127,4 +129,8 @@
 .new-chat-btn {
     background-color: var(--default-colour-pink);
     color: whitesmoke;
+}
+
+.displayed-chat-container {
+    overflow: overlay;
 }
